2005-03-07  Richard Williamson   <rjw@apple.com>

	Fixed <rdar://problem/4040749> REGRESSION (125-178): opacity style not working, breaks fading images on okcupid.com

	When layers are dynamically created/removed as a result of changing opacity they weren't being correctly
	sized and positioned.  This happens whenever opacity goes from < 1 to 1.

        Reviewed by Darin.

        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::updateLayerPosition):

2005-03-07  Christy Warren  <set EMAIL_ADDRESS environment variable>

        Reviewed by Darin

        * khtml/rendering/render_text.cpp:
        (RenderText::caretMinOffset): modified to handle BIDI case by checking all text boxes for min offset
        (RenderText::caretMaxOffset): modified to handle BIDI case by checking all text boxes for max offset

2005-03-07  David Harrison  <harrison@apple.com>

        Reviewed by Ken.

        <rdar://problem/4029225> REGRESSION (Mail): Crash if hit return after dragging in attachment - DeleteSelectionCommand::initializePositionData

        Work around the fact that the height() of a BR is 0 if there are no text elements on the line, even if there are replaced elements.
        Filed <rdar://problem/4040358> RenderBR height() is not accurate.
        
        * khtml/editing/htmlediting.cpp:
        (khtml::ReplaceSelectionCommand::doApply):
        When height is 0, double check that the placeholder is the first position on the line.

=== Safari-403 ===

2005-03-07  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Vicki
    
        Fix for this bug:
        
        <rdar://problem/4040136> Expose SPI for WebCore's functions to create document fragments from plain text and markup strings

        * kwq/DOMHTML.mm: Add two new SPI functions.
        (-[DOMHTMLDocument _createDocumentFragmentWithMarkupString:baseURLString:])