@@ -1,3 +1,15 @@
+2005-03-07  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+
+        <rdar://problem/4033202> REGRESSION (Mail): Can't arrow up at a particular spot in a particular Mail message
+
+        Doublecheck that new position is really on a different line, because the VisiblePosition constructor does not.
+        Filed <rdar://problem/4040763> for that problem.
+
+        * khtml/editing/visible_units.cpp:
+        (khtml::previousLinePosition):
+
 2005-03-07  Richard Williamson   <rjw@apple.com>
 
 	Fixed <rdar://problem/4040749> REGRESSION (125-178): opacity style not working, breaks fading images on okcupid.com
